...
        let likeImage =
            isLiked
            ? UIImage(resource: .likeOn)
            : UIImage(resource: .likeOff)
        likeButton.setImage(likeImage, for: .normal)
        likeButton.accessibilityIdentifier =
            isLiked ? "like button on" : "like button off"
        print(
            "[ImagesListCell] Настроили лайк изображение: \(isLiked ? "like_on" : "like_off"), identifier: \(likeButton.accessibilityIdentifier ?? "nil")"
        )
        cellImage.contentMode = .center
        cellImage.clipsToBounds = true
        guard let url = URL(string: imageURL) else {
...
