...
                                <rect key="frame" x="171" y="448" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="CL7-JZ-bOF"/>
                                    <constraint firstAttribute="height" constant="60" id="wzJ-iP-dtJ"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJF-aH-0xM">
                                <rect key="frame" x="29.666666666666657" y="808" width="343" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="LjM-GU-k0X"/>
                                    <constraint firstAttribute="width" constant="343" id="h83-7e-FV2"/>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="on1-Op-6nQ" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" restorationIdentifier="ShowWebView" id="Gz8-N4-mvB">
                        <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" accessibilityIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="ZHP-tk-WCA">
                                <rect key="frame" x="0.0" y="168" width="402" height="672"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
